<resources>
    <string name="app_name">Proyecto_Android</string>
    <string name="et_IngresarUsuario_Login_String">Ingrese su Usuario</string>
    <string name="et_IngresarPassword_Login_String">Ingrese su Password</string>
    <string name="btn_Ingresar_String">Ingresar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nu_txt_nombreusuario_string">Ingrese su primer Nombre</string>
    <string name="nu_txt_nombreusuario2_string">Ingrese su segundo Nombre </string>
    <string name="nu_txt_apellidosuario_string">Ingrese su primer Apellido</string>
    <string name="nu_txt_apellidousuario2_string">Ingrese su segundo Apellido </string>
    <string name="nu_txt_password_string">Ingrese la Contraseña </string>
    <string name="nu_cmd_Enviar">Enviar</string>
    <string name="nu_tv_Perfil">Perfil: </string>
    <string name="btn_eliminarUsuario_String">Confirmar</string>
    <string name="tv_eliminarUsuario_Spinner_idUsuario">Id Usuario: </string>
    <string name="txtBuscar_listarUsuarios_String">Buscar </string>
    <string name="txtBuscar_listarAlimentos_String">Buscar </string>
    <string name="txtSelId_modificarUsuarios_String">Seleccione el ID: </string>
    <string name="txtPerfilmodificarUsuarios_String">Perfil: </string>
    <string name="txtPassword_modificarUsuarios_String">Ingrese la Contraseña </string>
    <string name="btnConfirmar_modificarUsuarios_String">Confirmar </string>
    <string name="et_Nombre_agregarAlimentos_String">Ingrese el Nombre del Alimento </string>
    <string name="et_CostoPorUnidad_agregarAlimentos_String">Ingrese el Costo por Unidad </string>
    <string name="et_CantidadDisponible_agregarAlimentos_String">Ingrese la Cantidad Disponible </string>
    <string name="et_Unidad_String">Seleccione una Unidad </string>
    <string name="btn_Enviar_agregarAlimentos_String">Enviar </string>
    <string name="et_CostoPorUnidad_ModAl_String">Ingresar Costo por Unidad </string>
    <string name="et_CantidadDisponible_ModAl_String">Ingresar la Cantidad Disponible </string>
    <string name="et_SeleccioneAl_ModAl">Seleccione Alimento </string>
    <string name="btn_Confirmar_ModAl_String">Confirmar </string>
    <string name="txt_SeleccionarId_EU_String">Seleccione Id: </string>
    <string name="txt_SeleccionarIdTernera_CDA_String">Seleccione Id de Ternera: </string>
    <string name="txt_SeleccionarIdAlimento_CDA_String">Seleccione Id de Alimento: </string>
    <string name="txt_CantidadConsumida_CDA_String">Ingrese la Cantidad Consumida </string>
    <string name="txt_FechadeConsumo_CDA_String">Ingrese la Fecha </string>
    <string name="btn_Confirmar_CDA_String">Confirmar </string>
    <string name="tv_idTernera_GP_String">Seleccionar Id Ternera: </string>
    <string name="tv_tipoRegistro_GP_String">Seleccionar Tipo de Registro: </string>
    <string name="et_FechaRegistro_GP_String">Ingrese la Fecha de Registro </string>
    <string name="et_Peso_GP_String">Ingrese el Peso </string>
    <string name="btn_Eviar_GP_String">Enviar </string>
</resources>
